# chatwork_auto_read

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: docs.yml  release.yml
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/chatwork_auto_read/: all.html  fn.run.html  index.html  sidebar-items.js
doc/chatwork_auto_read/client/: index.html  sidebar-items.js  struct.ChatworkClient.html  trait.ChatworkClientTrait.html
doc/chatwork_auto_read/client/chatwork/: struct.ChatworkClient.html  trait.ChatworkClientTrait.html
doc/chatwork_auto_read/error/: enum.Error.html  index.html
doc/chatwork_auto_read/models/: index.html  sidebar-items.js  struct.Message.html  struct.ReadStatus.html  struct.Room.html
doc/chatwork_auto_read/models/message/: struct.Message.html
doc/chatwork_auto_read/models/read_status/: struct.ReadStatus.html
doc/chatwork_auto_read/models/room/: struct.Room.html
doc/chatwork_auto_read/processor/: index.html  sidebar-items.js  struct.MessageProcessor.html
doc/chatwork_auto_read/settings/: index.html  sidebar-items.js  struct.ChatworkSettings.html  struct.Settings.html
doc/chatwork_auto_read/utils/: fn.setup_logging.html  index.html  sidebar-items.js
doc/search.desc/chatwork_auto_read/: chatwork_auto_read-desc-0-.js
doc/src/chatwork_auto_read/: error.rs.html  lib.rs.html  processor.rs.html  settings.rs.html  utils.rs.html
src/: error.rs  lib.rs  main.rs  processor.rs  settings.rs  utils.rs
src/client/: chatwork.rs  mod.rs
src/models/: message.rs  mod.rs  read_status.rs  room.rs
(+18 files in other folders)
